src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@font-face {
    font-family: 'BundesSans';
    src: url('../../public/assets/fonts/BundesSansWeb-Regular.woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'BundesSans';
    src: url('../../public/assets/fonts/BundesSansWeb-Bold.woff');
    font-weight: bold;
    font-style: normal;
    font-display: swap;
}

html,
body {
  padding: 0;
  margin: 0;
  font-size: 18px;
  font-family: BundesSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  hyphens: auto;
  word-break: break-word;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.results {
    max-width: 100vw;
}


nav {
    min-width: 270px;
}


pre {
    background-color: transparent!important;
}

@keyframes spin {
    from {transform:rotate(0deg);}
    to {transform:rotate(360deg);}
}

.rotate {
    animation: spin 1.5s linear infinite;
}
.no-hyphens {
    hyphens: none;
}

